src/objects/TR1__Submittal__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Account__c</fullName>
        <formula>TR1__Job__r.TR1__Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Bill_Rate__c</fullName>
        <label>Bill Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Contact_Email__c</fullName>
        <formula>TR1__Job__r.TR1__Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Contact_Phone__c</fullName>
        <formula>TR1__Job__r.TR1__Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Contact__c</fullName>
        <formula>TR1__Job__r.TR1__Contact__r.FirstName &amp; &quot; &quot; &amp;  TR1__Job__r.TR1__Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Job Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Reporting__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Job Reporting</label>
        <referenceTo>TR1__Job_Reporting__c</referenceTo>
        <relationshipLabel>Submittals</relationshipLabel>
        <relationshipName>Submittals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Job__c</fullName>
        <label>Job</label>
        <referenceTo>TR1__Job__c</referenceTo>
        <relationshipLabel>Submittals</relationshipLabel>
        <relationshipName>Submittals</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>TR1__Number_of_Days_in_Stage__c</fullName>
        <formula>IF(IF( ISNULL(TR1__Stage_End_Date__c) , TODAY(), TR1__Stage_End_Date__c) - TR1__Stage_Start_Date__c = 0, 1, IF( ISNULL(TR1__Stage_End_Date__c) , TODAY(), TR1__Stage_End_Date__c) - TR1__Stage_Start_Date__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Days in Stage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TR1__Pay_Rate__c</fullName>
        <label>Pay Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Reject_Action__c</fullName>
        <formula>HYPERLINK(&apos;/apex/TR1__JobManagerSubmittalReject?Id=&apos;&amp;Id&amp;&apos;&amp;retURL=/&apos;&amp; TR1__Submittal__c&amp;&apos;&amp;saveURL=/&apos;&amp;TR1__Submittal__c, IMAGE(&apos;/resource/TR1__Reject&apos;, &apos;Reject&apos;, 25,25))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rjt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Rejection_Notes__c</fullName>
        <label>Rejection Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>TR1__Rejection_Notification__c</fullName>
        <label>Rejection Notification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Automated Rejection Email</fullName>
                </value>
                <value>
                    <fullName>Job Owner Will Notify</fullName>
                </value>
                <value>
                    <fullName>Contact Owner Will Notify</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Revert_Action__c</fullName>
        <formula>HYPERLINK(&apos;/apex/TR1__JobManagerSubmittalMoveBack?Id=&apos;&amp; Id &amp;&apos;&amp;retURL=/&apos;&amp; TR1__Submittal__c &amp;&apos;&amp;saveURL=/&apos;&amp;TR1__Submittal__c, IMAGE(&apos;/resource/TR1__MoveBack&apos;, &apos;Revert&apos;, 25,25))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Rvt</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Salary__c</fullName>
        <label>Salary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>TR1__Send_Out_Action__c</fullName>
        <formula>HYPERLINK(&apos;/apex/TR1__JobManagerSendout?conid=&apos;&amp;TR1__Submittal__c&amp;&apos;&amp;jobid=&apos;&amp; TR1__Job__c&amp;&apos;&amp;retURL=/&apos;&amp;TR1__Submittal__c, IMAGE(&apos;/resource/TR1__sendout&apos;, &apos;Send Out&apos;, 25, 25) , &apos;_self&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>S O</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Stage_End_Date__c</fullName>
        <label>Stage End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Stage_Start_Date__c</fullName>
        <label>Stage Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TR1__Stage__c</fullName>
        <formula>TEXT(TR1__Job_Reporting__r.TR1__Stage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Status__c</fullName>
        <label>Job Manager Stage Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                    <default>true</default>
                    <label>Current</label>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Submittal_Contact_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submittal Contact Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Submittals</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Submittal_Email__c</fullName>
        <formula>TR1__Submittal__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submittal Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Submittal_Mobile__c</fullName>
        <formula>TR1__Submittal__r.MobilePhone</formula>
        <label>Submittal Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Submittal_Phone__c</fullName>
        <formula>TR1__Submittal__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Submittal Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Submittal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submittal</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Submittals</relationshipLabel>
        <relationshipName>Submittal</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Submittal</label>
    <listViews>
        <fullName>TR1__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>TR1__Submittal__c</columns>
        <columns>TR1__Job__c</columns>
        <columns>TR1__Account__c</columns>
        <columns>TR1__Job_Contact__c</columns>
        <columns>TR1__Status__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TR1__Status__c</field>
            <operation>equals</operation>
            <value>Current</value>
        </filters>
        <label>My Submittals</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>TR1__All_Submittals</fullName>
        <columns>NAME</columns>
        <columns>TR1__Job__c</columns>
        <columns>TR1__Submittal_Email__c</columns>
        <columns>TR1__Submittal__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Submittals</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>SUB-{MM}{DD}{YYYY}-{0}</displayFormat>
        <label>Submittal Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Submittals</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>